k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: devops-challenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-challenge
  template:
    metadata:
      labels:
        app: devops-challenge
    spec:
      containers:
      - name: devops-challenge-app
        image: devops-challenge-app:latest # No pipeline de CI/CD, a tag 'latest' seria substituída pela tag do build (ex: SHA do commit)
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
            
        # Liveness Probe (Se falhar, o K8s reinicia o container)
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          failureThreshold: 3
          
        # Readiness Probe (Se falhar, o K8s tira o container do balanceamento do Service, mas não o reinicia)
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
