k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: devops-challenge
spec:
  type: ClusterIP
  selector:
    app: devops-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
